--- a/siteweb/templates/adquirir_plano.html
+++ b/siteweb/templates/adquirir_plano.html
@@ -12,7 +12,7 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <strong>Velocidade:</strong>
-                            <span class="text-muted">{{ plano.velocidade }} Mbps</span>
+                            <span class="text">{{ plano.velocidade }} MEGAS</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <strong>Preço:</strong>
