--- a/siteweb/templates/planos_adquiridos.html
+++ b/siteweb/templates/planos_adquiridos.html
@@ -13,7 +13,7 @@
                     <h5 class="card-title fw-bold text-primary">{{ plano.plano.nome }}</h5>
                     <p class="card-text text-muted">{{ plano.plano.descricao }}</p>
                     <ul class="list-unstyled mb-3">
-                        <li><strong>Velocidade:</strong> {{ plano.plano.velocidade }}</li>
+                        <li><strong>Velocidade:</strong> {{ plano.plano.velocidade }} MEGAS</li>
                         <li><strong>Preço:</strong> R$ {{ plano.plano.preco }}</li>
                     </ul>
                     <p class="card-text"><small class="text-muted">Adquirido em {{ plano.data_adquirida|date:"d/m/Y H:i" }}</small></p>
