--- a/siteweb/templates/includes/planos.html
+++ b/siteweb/templates/includes/planos.html
@@ -13,7 +13,7 @@
                     </div>
                     <ul class="list-group list-group-flush mb-4">
                         <li class="list-group-item border-0 ps-0">
-                            <i class="bi bi-speedometer2 text-primary me-2"></i>{{ plano.velocidade }}
+                            <i class="bi bi-speedometer2 text-primary me-2"></i>{{ plano.velocidade }} MEGAS
                         </li>
                         <li class="list-group-item border-0 ps-0">
                             <i class="bi bi-info-circle text-primary me-2"></i>{{ plano.descricao }}
